--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -7,6 +7,7 @@
   width:100%;
   background-color: orange;
   background-image: url("/images/checkered-pattern.png");
+  margin-top:8%;
 }
 
 header h2 {
