Style changes for tweet section error messages

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -10,6 +10,7 @@
   border-bottom: #57544d 4px solid;
   background-color: #f4f1ec;
   font-weight: 700;
+  height: auto;
 }
 label {
   font-weight: 700;
