--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,29 +1,27 @@
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 120px;
-  width: auto;
-  color: #FFFFFF;
-  background-color: #4056A1;
-  padding-left: 1.5em ;
-  padding-right: 1.5em;
-  padding-top: 1em;
-  position: fixed;
-  width: 100%;
-  top: 0;
-}
-span {
-  font-family: 'Bungee', cursive;
- font-size: 40px;
+/* Desktop style */
+
+@media only screen and (min-width: 1024px) {
+  body {
+    margin-top:25vh;
+  }
+  nav {
+      background-color: #4056A1;
+  }
 }
 
-div {
+span {
+  font-family: 'Bungee', cursive;
+  font-size: 40px;
+}
+
+.nav-div {
   display:flex;
   flex-direction: column;
   align-items: center;
+  position:relative;
 }
-div.inline {
+
+.inline {
   display: block;
 }
 
@@ -31,5 +29,33 @@ div.inline {
   color:red;
   display: flex;
   align-items: center;
-  padding:5px;
+  padding-right: 5px;
+  cursor: pointer;
+}
+
+ nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100px;
+  color: #FFFFFF;
+  padding-left: 2em ;
+  padding-right: 2em;
+  width: 100%;
+  top: 0;
+  position: fixed;
+}
+
+.fa-angles-down {
+  position: absolute;
+  animation: do 1.5s none ease-in-out infinite;
+  padding-top:3vh;
+}
+
+@keyframes do {
+  0%{top:10%}
+  25%{top: 20%}
+  50%{top: 15%}
+  75%{top: 20%}
+  100%{top: 10%}
 }
